Group controller unit tests